--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <input placeholder="Seu nome" name="name" id="name"/>
         <button class="primary">Entrar</button>
         <button class="secondary">Sair</button>
-    </section> 
+        </section> 
 </body>
 </html>
 
-/<!--Aula-->
+/<!--Aula 1-->
